# python-ai-experimentation

llama-stack-guardrails/: README.md  llama-stack-guardrails.py  pyproject.toml  requirements.txt
llama-stack-local-function-calling/: README.md  favorite-color.py  lint.py  pyproject.toml
llama-stack-mcp/: README.md  llama-stack-agent-mcp.py  llama-stack-local-mcp.py  llama-stack-register-mcp.py  requirements.txt  start-mcp-server-for-llama-stack.sh
llama-stack-mcp/favorite-server/: README.md  requirements.txt  server.py
llama-stack-otel/: llama-stack-agent-rag-otel.py  pyproject.toml  requirements.txt  setup.sh
llama-stack-rag/: README.md  lint.py  llama-stack-agent-rag.py  llama-stack-chat-rag.py  llama-stack-rag1.py  pyproject.toml  requirements.txt
llama-stack-rag-generated/: README.md  requirements.txt
llama-stack-rag-simple/: lint.py  llama-stack-agent-rag.py
